RESOLVED FIXED86514
[chromium] KeyPad flag not set for plugin input events
https://bugs.webkit.org/show_bug.cgi?id=86514
Summary [chromium] KeyPad flag not set for plugin input events
Brett Wilson (Google)
Reported 2012-05-15 13:03:56 PDT
There are two separate problems: - On GTK we never set the IsKeyPad flag. - This flag is lost when we round-trip through a WebCore input event and come back out as a WebKit::WebInputEvent to send to a plugin.
Attachments
Patch (2.48 KB, patch)
2012-05-15 13:05 PDT, Brett Wilson (Google)
no flags
Patch (4.27 KB, patch)
2012-05-15 15:39 PDT, Brett Wilson (Google)
no flags
Patch w/ lint fixed (4.30 KB, patch)
2012-05-15 15:49 PDT, Brett Wilson (Google)
dglazkov: review+
Lint even more fixed (4.30 KB, patch)
2012-05-18 10:28 PDT, Brett Wilson (Google)
webkit.review.bot: commit-queue-
Brett Wilson (Google)
Comment 1 2012-05-15 13:05:40 PDT
Brett Wilson (Google)
Comment 2 2012-05-15 13:07:07 PDT
WebKit Review Bot
Comment 3 2012-05-15 13:08:51 PDT
Attachment 142037 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/src/gtk/WebInputEventFactory.cpp:82: Place brace on its own line for function definitions. [whitespace/braces] [4] Source/WebKit/chromium/src/gtk/WebInputEventFactory.cpp:83: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebKit/chromium/src/gtk/WebInputEventFactory.cpp:84: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brett Wilson (Google)
Comment 4 2012-05-15 15:39:31 PDT
WebKit Review Bot
Comment 5 2012-05-15 15:43:59 PDT
Attachment 142083 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:180: Place brace on its own line for function definitions. [whitespace/braces] [4] Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:183: gdk_event is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:190: web_event is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:194: platform_builder is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:195: Use 0 instead of NULL. [readability/null] [5] Total errors found: 6 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brett Wilson (Google)
Comment 6 2012-05-15 15:49:59 PDT
Created attachment 142086 [details] Patch w/ lint fixed
WebKit Review Bot
Comment 7 2012-05-15 15:54:03 PDT
Attachment 142086 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dimitri Glazkov (Google)
Comment 8 2012-05-16 10:59:11 PDT
Comment on attachment 142086 [details] Patch w/ lint fixed View in context: https://bugs.webkit.org/attachment.cgi?id=142086&action=review Other than weird include order, r=me. >> Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:37 >> +#include "KeyboardEvent.h" > > Alphabetical sorting problem. [build/include_order] [4] I agree with style elf.
Brett Wilson (Google)
Comment 9 2012-05-18 10:28:23 PDT
Created attachment 142733 [details] Lint even more fixed
WebKit Review Bot
Comment 10 2012-05-18 10:30:47 PDT
Comment on attachment 142733 [details] Lint even more fixed Rejecting attachment 142733 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12720927
WebKit Review Bot
Comment 11 2012-05-18 10:34:55 PDT
Attachment 142733 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brett Wilson (Google)
Comment 12 2012-05-31 15:55:22 PDT
Landed in r119164.
Note You need to log in before you can comment on or make changes to this bug.