2012-05-15  Brett Wilson  <brettw@chromium.org>

Hook up GTK IsKeyPad flag for keyboard events, and preserve this flag
        on all platforms when converting back to a WebKeyboardEvent.

        https://bugs.webkit.org/show_bug.cgi?id=86514

        Reviewed by Dimitri Glazkov.

        * src/WebInputEventConversion.cpp:
        (WebKit::WebKeyboardEventBuilder::WebKeyboardEventBuilder):
        * src/gtk/WebInputEventFactory.cpp:
        (WebKit::WebInputEventFactory::keyboardEvent):
        * tests/WebInputEventFactoryTestGtk.cpp:



Canonical link: https://commits.webkit.org/105852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119164 268f45cc-cd09-0410-ab3c-d52691b4dbfc